# Astrology

./: .env.example  .gitignore  LICENSE  README.md  README.zh-tw.md  build_rag.py  main.py  pyproject.toml  setup_rag.py
app/: constants.py  main.py  schemas.py
app/core/: astrology.py  geocoder.py
app/services/: ai.py  rag.py
app/utils/: formatters.py  store.py
frontend/: package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AIAdvice.jsx  CustomAstroChart.jsx  DataTable.jsx  InputForm.jsx
static/: app.js  style.css
templates/: index.html
tests/: analyze_pdfs.py  ocr_extract.py  test_gemini.py
