[project]
name = "astrology"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.2",
    "flask>=3.1.2",
    "geopy>=2.4.1",
    "google-generativeai>=0.8.5",
    "pyswisseph>=2.10.3.2",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "swisseph>=0.0.0.dev1",
    "timezonefinder>=8.0.0",
    "uvicorn>=0.35.0",
]
